# rust-net8-bench

./: LICENSE  README.md
net-web-api-bench/: .dockerignore  .gitignore  Dockerfile  Program.cs  docker-compose.yaml  net-web-api-bench.csproj  net-web-api-bench.sln
net-web-api-bench/Properties/: launchSettings.json
net-web-api-bench/db/: Dockerfile
net-web-api-bench/db/certs/: server.req
net-web-api-bench/monitor/: prometheus.yaml
rs-web-api/: .dockerignore  Cargo.toml  Dockerfile  docker-compose.yaml
rs-web-api/db/: Dockerfile  db-init.sh  pg_hba.conf
rs-web-api/db/certs/: privkey.pem  server.crt  server.key
rs-web-api/src/: app.rs  main.rs
rs-web-api/src/app/: endpoints.rs
rs-web-api/src/app/endpoints/: cars.rs  prime.rs
