[package]
name = "rs-web-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.3"
bytes = "1.10.1"
dotenv = "0.15.0"
rayon = "1.10.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls-ring", "postgres", "time", "uuid"] }
tokio = { version = "1.44.2", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
uuid = { version = "1.16.0", features = ["serde", "v4"] }
